# ai_play

./: .gitignore  README.md  alembic.ini  cli.py  config.py  database.py  lib.py  main.py  models.py  newmexico.db  pyproject.toml
alembic/: env.py
alembic/versions/: initial_migration.py
db_dumps/: wiki_entries_20250105_184352.json  wiki_entry_logs_20250105_184352.json
static/: index.html  wiki-api.js
web/: main.py
web/static/: wiki-api.js
web/templates/: index.html
wiki_tools/: __init__.py  database.py  lib.py  models.py
