[project]
name = "adobeandsage"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiohttp>=3.11.11",
    "fastapi[standard]>=0.115.6",
    "jinja2>=3.1.5",
    "mesop>=0.14.0",
    "psycopg2>=2.9.10",
    "pydantic-ai>=0.0.16",
    "pydantic-settings>=2.7.1",
    "rich>=13.9.4",
    "sqlalchemy>=2.0.36",
    "typer>=0.15.1",
]
